[APB-3125][SD,SS] fix spacing issues in all the new pages agent hybrid multi auth.

--- a/app/assets/stylesheets/styles.css
+++ b/app/assets/stylesheets/styles.css
@@ -7,6 +7,9 @@
 .margin-top-10 {
     margin-top: 10px !important;
 }
+.margin-top-20 {
+    margin-top: 20px !important;
+}
 .margin-top-30 {
     margin-top: 30px !important;
 }
@@ -18,6 +21,12 @@
 }
 .margin-top-60 {
     margin-top: 60px !important;
+}
+.margin-bottom-0 {
+    margin-bottom: 0px !important;
+}
+.margin-bottom-10 {
+    margin-bottom: 10px !important;
 }
 .margin-bottom-20 {
     margin-bottom: 20px !important;
@@ -126,4 +135,7 @@ caption.caption-normal{
 }
 .form-field--error input[type="text"]{
     border: 4px solid #b10e1e;
+}
+.form-field--error legend h1{
+    margin-top: 0!important
 }
